--- a/chatclient/angular.json
+++ b/chatclient/angular.json
@@ -26,7 +26,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "assets/download.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -76,7 +78,7 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": ["assets/download.js"],
             "assets": [
               "src/favicon.ico",
               "src/assets"
