--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Maximilian Waiblinger(762390), Adrian Schwab(762382)",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cfenv": "^1.1.0",
     "delivery": "0.0.6",
