--- a/chatclient/angular.json
+++ b/chatclient/angular.json
@@ -27,7 +27,6 @@
               "src/styles.css"
             ],
             "scripts": [
-              "assets/download.js"
             ]
           },
           "configurations": {
@@ -78,7 +77,7 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": ["assets/download.js"],
+            "scripts": [],
             "assets": [
               "src/favicon.ico",
               "src/assets"
