--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "moment": "^2.22.2",
     "mongodb": "^3.1.10",
     "mongoose": "^4.13.17",
+    "redis": "^2.8.0",
     "socket.io": "^2.1.1",
+    "socket.io-redis": "^5.2.0",
     "socketio-file-upload": "^0.6.4",
+    "sticky-session": "^1.1.2",
     "watson-developer-cloud": "^3.13.0"
   }
 }
